# devsecops

./: .gitignore  5 Curated Good First Issues.docx  CONTRIBUTING.md  Dockerfile  IAM_AutoCleanup_Script_V1.py  IAM_Cleanup_Automation_script_v2.py  IAM_User_Cleanup_Automation_Issue#49.py  README.md  app.js  package-lock.json  package.json  playwright.config.ts  s3securitycompliance.py  sonar-project.properties  start.sh
.github/actions/checkout/: action.yml
.github/workflow/: branch.yaml
.github/workflows/: database-ci-cd-test.yml  deploy.yml  lint.yml  playwright-tests.yml  repo-structure-check.yml  synthetic-contactus.yml  zap-scan.yml
Docs/: Saayam_AWS.drawio  Saayam_AWS_AWSManaged.drawio  Saayam_AWS_Self_Managed.drawio
Iac/: README.md  main.tf  outputs.tf  variables.tf
Iac/backend/: main.tf  outputs.tf  variables.tf
Iac/iam-user-role/: main.tf  outputs.tf  terraform.tfvars  variables.tf
Iac/modules/iam_user_role/: main.tf  outputs.tf  variables.tf
docs/: NEW_VOLUNTEER_BACKEND_FLOW.md  Saayam-Test-Architecture.md  steps-for-eks-cluster.md
e2e/tests/: about.spec.ts  contact.spec.ts  donate.spec.ts  hero.spec.ts  homepage.spec.ts  smoke.spec.ts
pulumi-scripts/: Pulumi.saayam-uswest2.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json  servicerole.ts
pulumi-scripts/tests/: testrandomid.ts
pulumi-scripts/utils/: randomid.ts
sample-fastapi/: Dockerfile  gunicorn.conf.py  pyproject.toml  requirements.txt
sample-fastapi/sample_fastapi/: server.py
sample-fastapi/sample_fastapi/routers/: health.py
sample-fastapi/scripts/: run.sh
